# Miztli_doc_2.0

./: README.md
Festino/catkin_ws/src/Planning/knowledge/: CMakeLists.txt
Festino/catkin_ws/src/RosNav/: README
Festino/catkin_ws/src/RvizConfig/: Robotino_wMap.rviz
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/bbros_bridge/: Default_BB_ROS_BridgeRequest.h  Default_BB_ROS_BridgeResponse.h  Default_ROS_BB_BridgeRequest.h  Default_ROS_BB_BridgeResponse.h  RecognizedSpeech.h  hd_lookatRequest.h  hd_lookatResponse.h  hd_torqueRequest.h  hd_torqueResponse.h  mp_getcloseRequest.h  mp_getcloseResponse.h  mp_getclose_xyRequest.h  mp_getclose_xyResponse.h  mp_getclose_xyaRequest.h  mp_getclose_xyaResponse.h  mp_move_distRequest.h  mp_move_distResponse.h  mp_move_dist_angleRequest.h  mp_move_dist_angleResponse.h
catkin_ws/devel/include/navig_msgs/: Edges.h  GeometryGraph.h  GetBoundaryPointsRequest.h  GetBoundaryPointsResponse.h  GetGoalPointRequest.h  GetGoalPointResponse.h  GetInflatedMapRequest.h  GetInflatedMapResponse.h
catkin_ws/devel/lib/camera/: camera_node
catkin_ws/devel/lib/joy/: joy_node
catkin_ws/devel/lib/kdl_parser/: check_kdl_parser
catkin_ws/devel/lib/laser_proc/: laser_proc
catkin_ws/devel/lib/map_augmenter/: map_augmenter_node
catkin_ws/devel/lib/map_sparser/: sparse_by_vq
catkin_ws/devel/lib/mobile_base/: hexa_base_node  omni_base_node
catkin_ws/devel/lib/mvn_pln/: mvn_pln_node
catkin_ws/devel/lib/obstacle_detector/: obs_detect_node
catkin_ws/devel/lib/pkgconfig/: joy.pc  (+32 more)
rules/: README.md
(+121 files in other folders)
